--- a/themes/responsiv-flat/pages/home_backup.htm
+++ b/themes/responsiv-flat/pages/home_backup.htm
@@ -2,7 +2,9 @@ title = "Demonstration"
 url = "/"
 layout = "default"
 ==
-
+{% put styles %}
+    <link type="text/css" href="themes/responsiv-flat/assets/css/style.css">
+{%endput}
 <section >
     <div class="container">
         <div class="row">
