--- a/themes/responsiv-flat/pages/home_backup.htm
+++ b/themes/responsiv-flat/pages/home_backup.htm
@@ -4,7 +4,7 @@ layout = "default"
 ==
 {% put styles %}
     <link type="text/css" href="themes/responsiv-flat/assets/css/style.css">
-{%endput}
+{% endput %}
 <section >
     <div class="container">
         <div class="row">
@@ -23,7 +23,7 @@ layout = "default"
                             <div class="carousel-caption">
                             <h3>Los Angeles</h3>
                             <p>LA is always so much fun!</p>
-                            <a href="" class="btn btn-default btn-md">ini button</a>
+                            <a href="" class="btn btn-default btn-caro">ini button</a>
                             </div>
                         </div>
                     
@@ -32,6 +32,7 @@ layout = "default"
                             <div class="carousel-caption">
                                 <h3>Chicago</h3>
                                 <p>Thank you, Chicago!</p>
+                                <a href="" class="btn btn-default btn-caro">ini button</a>
                             </div>
                         </div>
                     </div>
