--- a/themes/responsiv-flat/pages/home_backup.htm
+++ b/themes/responsiv-flat/pages/home_backup.htm
@@ -82,10 +82,10 @@ is_hidden = 0
                 </h3>               
 
                 <div class="text-center">
-                    <ul class="nav nav-pills list-inline">
-                        <li class="text-center active"><a class="btn btn-default bulat" data-toggle="pill" href="#osp">On Sale Product</a></li>
-                        <li class="text-center"><a class="btn btn-default bulat" data-toggle="pill" href="#fp">Featured Products</a></li>
-                        <li class="text-center"><a class="btn btn-default bulat" data-toggle="pill" href="#trp">Top Rated Products</a></li>
+                    <ul class="list-inline">
+                        <li class="active"><a class="btn btn-default bulat" data-toggle="pill" href="#osp">On Sale Product</a></li>
+                        <li><a class="btn btn-default bulat" data-toggle="pill" href="#fp">Featured Products</a></li>
+                        <li><a class="btn btn-default bulat" data-toggle="pill" href="#trp">Top Rated Products</a></li>
                     </ul>   
                 </div>
 
