--- a/themes/responsiv-flat/pages/home_backup.htm
+++ b/themes/responsiv-flat/pages/home_backup.htm
@@ -147,7 +147,7 @@ postPage = "blog/post"
 </section>
 
 <br>
-
+<!-- category -->
 <section>
     <div class="container">
         <div class="row">
@@ -160,6 +160,8 @@ postPage = "blog/post"
                 <div class="text-center">
                     <a href="" class="btn btn-default bulat">View All</a>
                 </div>
+
+                <div class="row"></div>
 
                 <div id="crsl2" class="carousel slide crsl" data-ride="crsl2" data-interval="0">
                     <!-- crsl indicators -->
