--- a/themes/responsiv-flat/pages/home_backup.htm
+++ b/themes/responsiv-flat/pages/home_backup.htm
@@ -54,9 +54,9 @@ postPage = "blog/post"
 {% endput %}
 
 <!-- image slider dan banner -->
-<section >
+<section id="sec_1">
     <div class="container">
-        <div class="row">
+        <div class="row" style="height: 88vh;">
             <div class="col-md-6">
             {% component 'imagelist' %}
             </div>
